--- a/step1/style.css
+++ b/step1/style.css
@@ -19,16 +19,17 @@ img {
 }
 
 .info>.location {
-    width: 100px;
-    height: 75px;
+    width: 120px;
+    height: 85px;
     margin-top: 5px;
-    border: 1px solid black;
+    background-color: coral;
+    border-radius: 30%;
+    display: inline-block;
 }
 
 .info>.phone {
     width: 100px;
     height: 80px;
-    filter: grayscale(1);
 }
 
 .info>.delivery {
@@ -70,6 +71,34 @@ input {
     border-radius: 5px;
     margin: 10px ;
  
+}
+#btn2{
+position: relative;
+left: 60%;
+}
+
+
+
+
+.info>.location2 {
+    width: 120px;
+    height: 85px;
+    margin-top: 5px;
+}
+.info>.phone2 {
+    width: 100px;
+    height: 80px;
+    background-color: black;
+    border-radius: 30%;
+    display: inline-block;
+    margin-top: 5px;
+
+}
+
+#form-two{
+    margin: 5% 0;
+    position: relative;
+
 }
 
 
